# manser

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
manser/: __main__.py  config.py  handlers.py
manser/client/: feedly.py  proxy6.py  store.py
manser/client/manga/: abc.py  mangahub.py  mangalib.py  readmanga.py  remanga.py
manser/workers/: feedly.py
tests/: conftest.py  test_manser.py  test_proxy6.py  test_rest.py  test_store.py
tests/html/: mangahub-cheshire_crossing.html  mangahub-naruto.html  mangalib-cheshire_crossing.html  mangalib-yakusoku-no-neverland.html  readmanga-cheshire_crossing.html  readmanga-van_pis.html
tests/json/proxy6-api/test-key/: getproxy.json
tests/json/remanga-api/titles/: blade_of_demon_destruction.json  cheshire_crossing.json
tests/json/remanga-api/titles/chapters/: branch_id=208.json  branches=1861.json
