[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
src_paths = "manser,test"

[tool.poetry]
name = "manser"
version = "0.1.0"
description = "Manser - Rest API to find update of mangas chapters"
authors = ["pavkazzz <me@pavkazzz.ru>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
aiohttp_socks = "^0.4.2"
aioitertools = "^0.7.0"
async_asgi_testclient = "^1.4.4"
chardet = "^3.0.4"
cssselect = "^1.1.0"
fastapi = "0.60.1"
filelock = "^3.0.12"
lsm-db = "^0.6.4"
lxml = "^4.5.1"
more_itertools = "^8.4.0"
orjson = "^3.0.2"
python = "^3.8"
starlette_exporter = "^0.4.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
aresponses = "^2.0.0"
async_asgi_testclient = "^1.4.4"
black = "^19.10b0"
isort = "^5.0.7"
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
setuptools = "^47.1.1"
asyncio-socks5 = "^0.2.11"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
